# planABC

./: .gitignore  README.md  develop note.txt
code/server/: one_build.sh  one_restart.sh  server_port_config.txt
code/server/contri/comm/: makefile  readme.txt
code/server/contri/comm/include/: List.h  MemoryPool.h  constants.h  errcodes.h  int_types.h  list_hash.h  protocols.h
code/server/contri/comm/src/: MemoryPool.cpp
code/server/contri/coroutine/: corotinue使用文档.docx  makefile  readme.txt
code/server/contri/coroutine/src/: client_session.cpp  client_session.h  libco_data_type.cpp  libco_data_type.h  libco_net_session.cpp  libco_net_session.h  libco_routine_manager.cpp  libco_routine_manager.h  libco_wrap.cpp  libco_wrap.h  msg.cpp  msg.h  option.h  param.h  processor.cpp  processor.h  server_session.cpp  server_session.h  session_manager.cpp  session_manager.h  translater.cpp  translater.h  type_trait.h  utils.h
code/server/contri/coroutine/src/strategy/: CMakeLists.txt  conshashselector.cpp  conshashselector.h  crc32.h  directselector.cpp  directselector.h  hashselector.cpp  hashselector.h  scoreselector.cpp  scoreselector.h  selector.cpp  selector.h  session.cpp  session.h  sessiongroup.cpp  sessiongroup.h  test.cpp  test.h
code/server/contri/leveldb-master/sourceinsight/: leveldb.IAB  leveldb.IAD  leveldb.IMB  leveldb.IMD  leveldb.PFI  leveldb.PO  leveldb.PR  leveldb.PRI  leveldb.PS  leveldb.SearchResults  (+1 more)
code/server/contri/libco/: co_hook_sys_call.cpp  co_routine.cpp  co_routine.h  co_routine_inner.h  coctx.cpp  coctx.h
code/server/contri/net/: build.sh  config.status  configure  configure.ac  libtool  readme.txt
code/server/contri/net/docs/: Doxyfile  gen_docs.bat  net_manager.chm
code/server/contri/net/src/: Makefile.am  binary_splitter.cpp  binary_splitter.h  binary_stream.h  binary_stream.inl  block_buffer.cpp  block_buffer.h  comm.h  config.h  cycle_buffer.h  epoll_reactor.cpp  epoll_reactor.h  event_handler.cpp  event_handler.h  net_acceptor.cpp  net_acceptor.h  net_connector.cpp  net_connector.h  net_event.cpp  net_handle_manager.cpp  net_handle_manager.h  net_handler.cpp  net_handler.h  net_manager.cpp  net_manager.h  net_packet.cpp  net_packet.h  net_session.cpp  net_session.h  net_thread.cpp  net_thread.h  os.h  phpAgent_splitter.cpp  phpAgent_splitter.h  pool_allocator.h  reactor.cpp  reactor.h  select_reactor.cpp  select_reactor.h  send_task.cpp  (+13 more)
code/server/contri/net/test/: Makefile.am  common.cpp  common.h  test_server.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_thread.cpp  test_udp.cpp
code/server/contri/net/test/.deps/: common.Po  test_server.Po  test_tcp_client.Po  test_tcp_server.Po  test_thread.Po  test_udp.Po
code/server/contri/net/win32/: net_manager.sln  net_manager.vcproj  test_tcp_client.vcproj  test_tcp_server.vcproj  test_udp.vcproj
code/server/contri/proto_src/: makefile
code/server/contri/utils/: makefile  readme.txt
code/server/dbagent/trunk/src/: CMakeLists.txt  client_accept.cpp  client_session.cpp  cmd.cpp  config.cpp  dbpool.cpp  msg.cpp  mysql_msg.cpp  mysql_processor.cpp  mysqloperator.cpp  server.cpp  server_app.cpp  server_config.cpp  udp_cmd_session.cpp
code/server/dbp/script/: create_db.sh  create_global_id_table.sh  create_task_info_table.sh  create_task_list_table.sh  create_third_bind_table.sh  create_user_reg_id.sh  create_user_table.sh  db.table  drop_db.sh  drop_table.sh  one_build_system.sh
code/server/dbp/trunk/src/: CMakeLists.txt  client_msg.cpp  client_msg.h  client_processor.cpp  client_processor.h  cmd.cpp  cmd.h  dbagent_processor.cpp  dbagent_processor.h  factories.cpp  factories.h  inner_common_msg.cpp  mysql_msg.cpp  mysql_msg.h  redis_client.cpp  redis_client.h  redis_proxy_processor.cpp  redis_proxy_processor.h  server.cpp  server_app.cpp  server_app.h  udp_cmdline_processor.cpp  udp_cmdline_processor.h  xml_parser.cpp  xml_parser.h
code/server/leveldb_server/etc/: cfg.xml  cfg_master.xml  cfg_slave.xml
code/server/leveldb_server/src/: CMakeLists.txt  alivecmd.cpp  backend_sync.cpp  backend_sync.h  binlog.cpp  binlog.h  client_accept.cpp  client_accept.h  client_session.cpp  client_session.h  cmake_install.cmake  cmd.h  cmd_thread.cpp  cmd_thread.h  data_type.h  handlemsgcmd.cpp  leveldb_dump.cpp  leveldb_dump.h  leveldb_engine.cpp  leveldb_engine.h  leveldb_server.cpp  leveldb_server_app.cpp  leveldb_server_app.h  leveldb_sync.cpp  leveldb_sync.h  master_session.cpp  master_session.h  msg.cpp  msg.h  nobinlog_iterator.cpp  nobinlog_iterator.h  rebuild.sh  serverconfig.cpp  serverconfig.h  slave_session.cpp  slave_session.h  udp_cmd_session.cpp  udp_cmd_session.h  utils.cpp  utils.h
code/server/leveldb_server/tool/: CMakeLists.txt  leveldb_tool.cpp
code/server/mobiled/branch/demo_test_cond/src/: CMakeLists.txt  client_session.cpp  cmd.cpp  request.cpp  server_app.cpp  udp_cmd_session.cpp
code/server/mobiled/trunk/: benchmarks.proto
code/server/prj_template/include/: client_session.h  cmd.h  server_app.h  server_config.h
code/server/prj_template/src/: CMakeLists.txt  client_session.cpp  cmd.cpp  server_app.cpp  server_config.cpp  udp_cmd_session.cpp
code/server/push_php/: binary_server.php  pb_proto_adv_protocol.php
code/server/pushserver/: readme.txt
code/server/pushserver/trunk/: build.xml
code/server/taskmgr/trunk/: app.js  package.json
code/server/tool/protocol/: procotol
code/server/tool/src/: bclient.js  config.js
code/server/user_center/trunk/src/: CMakeLists.txt  client_msg.cpp  client_msg.h  client_processor.cpp  client_processor.h  cmd.cpp  cmd.h  dbp_processor.cpp  dbp_processor.h  factories.cpp  factories.h  ldb_processor.cpp  ldb_processor.h  login_server.cpp  login_server_app.cpp  login_server_app.h  parser.cpp  parser.h  redis_client.cpp  redis_client.h  status_processor.cpp  status_processor.h  user.cpp  user.h  xml_parser.cpp  xml_parser.h
design/planABC/: db_script.txt  planABC需求整理.docx  任务系统.docx  任务系统原型设计.mp
design/server/: 后端存储设计.docx  客户端-服务端协议.docx  时序图.vsd  服务端架构.vsd  详细过程.xlsx
design/server/proto/: adv_base.proto
(+224 files in other folders)
