#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ(2.59)
AC_INIT([Net], [1.0.0], [chengp@mail.51.com])
AC_CONFIG_SRCDIR([src/net_manager.h])
AC_PROG_LIBTOOL
#AC_CONFIG_HEADER([src/net_manager.h])
AM_INIT_AUTOMAKE([foreign])
#AM_PATH_CPPUNIT([1.12.0])
AC_CONFIG_FILES([
Makefile
src/Makefile
test/Makefile
])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_CHECK_FUNCS([strchr])

AC_OUTPUT
